# osm-lts

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release-testpypi.yml  release.yml  test.yml
src/osm_lts/: __init__.py  _classify.py  _constants.py  cli.py  sql.py
tests/: test_classifier.py  test_classify.py  test_cli.py  test_sql.py
