[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "osm-lts"
version = "0.2.0"
description = "Classify OpenStreetMap ways by Level of Traffic Stress (LTS) using the Furth methodology."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Bike Streets" }]
keywords = [
  "osm",
  "openstreetmap",
  "lts",
  "level-of-traffic-stress",
  "cycling",
  "bicycle",
  "advocacy",
  "transportation",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Sociology",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7"]

[project.scripts]
osm-lts = "osm_lts.cli:main"

[project.urls]
Homepage = "https://github.com/bikestreets/osm-lts"
Source = "https://github.com/bikestreets/osm-lts"
Issues = "https://github.com/bikestreets/osm-lts/issues"
Changelog = "https://github.com/bikestreets/osm-lts/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/osm_lts"]

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
addopts = "-ra --doctest-modules"
